<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.shaplachottor.lab.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_phasesFragment"
            app:destination="@id/phasesFragment" />
        <action
            android:id="@+id/action_homeFragment_to_classroomFragment"
            app:destination="@id/classroomFragment" />
    </fragment>

    <fragment
        android:id="@+id/phasesFragment"
        android:name="com.shaplachottor.lab.fragments.PhasesFragment"
        android:label="Learning Phases"
        tools:layout="@layout/fragment_phases">
        <argument
            android:name="phaseId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_phasesFragment_to_classroomFragment"
            app:destination="@id/classroomFragment" />
    </fragment>

    <fragment
        android:id="@+id/classroomFragment"
        android:name="com.shaplachottor.lab.fragments.ClassroomFragment"
        android:label="Classroom"
        tools:layout="@layout/fragment_classroom">
        <argument
            android:name="phaseId"
            app:argType="string" />
        <action
            android:id="@+id/action_classroomFragment_to_lessonDetailFragment"
            app:destination="@id/lessonDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/lessonDetailFragment"
        android:name="com.shaplachottor.lab.fragments.LessonDetailFragment"
        android:label="Lesson Details"
        tools:layout="@layout/fragment_lesson_detail">
        <argument
            android:name="phaseId"
            app:argType="string" />
        <argument
            android:name="lessonId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/educationFragment"
        android:name="com.shaplachottor.lab.fragments.EducationFragment"
        android:label="@string/title_courses"
        tools:layout="@layout/fragment_education" >
        <action
            android:id="@+id/action_educationFragment_to_phasesFragment"
            app:destination="@id/phasesFragment" />
        <action
            android:id="@+id/action_educationFragment_to_classroomFragment"
            app:destination="@id/classroomFragment" />
    </fragment>

    <fragment
        android:id="@+id/myLearningFragment"
        android:name="com.shaplachottor.lab.fragments.MyLearningFragment"
        android:label="@string/title_my_learning"
        tools:layout="@layout/fragment_my_learning" >
        <action
            android:id="@+id/action_myLearningFragment_to_phasesFragment"
            app:destination="@id/phasesFragment" />
        <action
            android:id="@+id/action_myLearningFragment_to_classroomFragment"
            app:destination="@id/classroomFragment" />
    </fragment>

    <fragment
        android:id="@+id/advancedFragment"
        android:name="com.shaplachottor.lab.fragments.AdvancedFragment"
        android:label="@string/title_advanced"
        tools:layout="@layout/fragment_advanced" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.shaplachottor.lab.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_adminPanelFragment"
            app:destination="@id/adminPanelFragment" />
    </fragment>

    <fragment
        android:id="@+id/adminPanelFragment"
        android:name="com.shaplachottor.lab.fragments.AdminPanelFragment"
        android:label="Admin Panel"
        tools:layout="@layout/fragment_admin_panel" />

    <!-- Secondary fragments accessible from Advanced -->
    <fragment
        android:id="@+id/installFragment"
        android:name="com.shaplachottor.lab.fragments.InstallFragment"
        android:label="Install Bot"
        tools:layout="@layout/fragment_install" />

    <fragment
        android:id="@+id/investFragment"
        android:name="com.shaplachottor.lab.fragments.InvestFragment"
        android:label="Invest"
        tools:layout="@layout/fragment_invest" />

    <fragment
        android:id="@+id/affiliateFragment"
        android:name="com.shaplachottor.lab.fragments.AffiliateFragment"
        android:label="Affiliate"
        tools:layout="@layout/fragment_affiliate" />

</navigation>
